--- a/Frontend/src/style/Carousel.css
+++ b/Frontend/src/style/Carousel.css
@@ -1,4 +1,101 @@
-.container{
+/* .container {
+  position: relative;
+  width: 1067px;
+  height: 201px;
+  font-family: "Poppins";
+  font-weight: 400;
+  color: #000000;
+  cursor: pointer;
+}
+
+.elementsContainer {
+  width: 252px !important;
+  height: 195px;
+}
+
+.imgPriceContainer {
+  position: relative;
+  z-index: 2;
+  margin: 0;
+  padding: 0;
+}
+
+.price {
+  position: absolute;
+  top: 0;
+  z-index: 3;
+  font-size: 15px;
+  width: 62px;
+  height: 37px;
+  border-radius: 0px 0px 0px 10px; 
+  background: #333333;
+  color: #ffffff;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.locStarContainer {
+  display: flex;
+  width: 252px;
+  height: 30px;
+  font-size: 13px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.image {
+  height: 165px;
+  width: 252px;
+}
+
+.rateStarContainer {
+  display: flex;
+}
+
+.start {
+  width: 18px;
+  height: 18px;
+  margin-left: 1px;
+}
+.swiper-button-next::after {
+  font-size: 30px !important;
+}
+
+.swiper-button-prev::after {
+  font-size: 30px !important;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #ffffff !important;
+  background: #666666;
+  width: 29px !important;
+  top: 66px !important;
+  height: 75px !important;
+}
+
+.swiper-button-next {
+  right: 0 !important;
+}
+
+.swiper-button-prev {
+  left: 0 !important;
+}
+
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  background: #333333;
+} */
+
+
+/* aqui esta el codigo corregido puedes analizar y corrgir los errores
+tambien de aplico metodologia BEM para mejor manejo del clases */
+
+
+.container {
     position: relative;
     width: 1067px;
     height: 201px;
@@ -6,91 +103,85 @@
     font-weight: 400;
     color: #000000;
     cursor: pointer;
-}
-
-.elementsContainer{
-    width: 252px !important;
+  }
+  
+  .elementsContainer {
+    width: 252px;
     height: 195px;
-
-}
-
-.imgPriceContainer{
+  }
+  
+  .imgPriceContainer {
     position: relative;
     z-index: 2;
     margin: 0;
     padding: 0;
-}
-
-
-
-.price{
+  }
+  
+  .price {
     position: absolute;
-    top:0;
+    top: 0;
     z-index: 3;
     font-size: 15px;
     width: 62px;
     height: 37px;
-    border-radius: 0px 0px 0px 10px; /* Corregir la sintaxis del border-radius */
+    border-radius: 0 0 0 10px;
     background: #333333;
-    color: #FFFFFF;
+    color: #ffffff;
     right: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.locStarContainer{
+  }
+  
+  .locStarContainer {
     display: flex;
     width: 252px;
     height: 30px;
     font-size: 13px;
     align-items: center;
     justify-content: space-between;
-}
-
-.image{
+  }
+  
+  .image {
     height: 165px;
     width: 252px;
-}
-
-.rateStarContainer{
+  }
+  
+  .rateStarContainer {
     display: flex;
-}
-
-.start{
+  }
+  
+  .star {
     width: 18px;
     height: 18px;
     margin-left: 1px;
-
-}
-.swiper-button-next::after{
-   font-size: 30px !important;
-}
-
-.swiper-button-prev::after{
-    font-size: 30px !important;
- }
-
-.swiper-button-next,
-.swiper-button-prev {
-  color: #FFFFFF !important; /* Change this to your desired color */
-  background: #666666;
-  width: 29px !important;
-  top: 66px !important;
-  height: 75px !important; 
-    
-}
-
-.swiper-button-next{
-    right: 0 !important;
-}
-
-.swiper-button-prev{
-    left: 0 !important;
-}
-
-/* Optional: Change the color on hover for better user feedback */
-.swiper-button-next:hover,
-.swiper-button-prev:hover {
+  }
+  
+  .swiper-button-next::after,
+  .swiper-button-prev::after {
+    font-size: 30px; 
+  }
+  
+  .swiper-button-next,
+  .swiper-button-prev {
+    color: #ffffff; 
+    background: #666666;
+    width: 29px;
+    top: 66px;
+    height: 75px;
+  }
+  
+  .swiper-button-next {
+    right: 0;
+  }
+  
+  .swiper-button-prev {
+    left: 0;
+  }
+  
+ 
+  .swiper-button-next:hover,
+  .swiper-button-prev:hover {
     background: #333333;
-}
+  }
+  
