--- a/Frontend/src/style/Form.css
+++ b/Frontend/src/style/Form.css
@@ -1,9 +1,9 @@
-/* .body{
+.body{
     width: 100%;
     height: 100%;
     background-color: rgb(134, 134, 134);
     text-align: center;
-} */
+}
 .form{
     width: 40%;
     background-color: rgb(252, 252, 252);
