--- a/Frontend/src/style/Inicio.css
+++ b/Frontend/src/style/Inicio.css
@@ -18,7 +18,8 @@
   align-items: center;
   justify-content: center;
   border-radius: 8px;
-  border: 1px solid #c4c4c4;
+  gap: 5px;
+
 }
 
 
@@ -27,19 +28,16 @@
 text-align: center;
   width: 184px;
   height: 49px;
-  padding: 12px 50px 12px 30px;
+ 
   border-radius: 8px 0px 0px 8px;
-  border: 1px solid #cccbcb;
-  background: #fff;
-  color: #000;
+  
+ 
   font-family: Poppins;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  cursor: pointer;
-  outline: none;
-  appearance: none;
+ 
 }
 
 .home__button--date {
@@ -59,6 +57,7 @@ text-align: center;
   font-weight: 400;
   line-height: normal;
   cursor: pointer;
+  
 }
 
 .home__input--date {
