--- a/Frontend/src/style/Inicio.css
+++ b/Frontend/src/style/Inicio.css
@@ -105,17 +105,21 @@ text-align: center;
   line-height: normal;
   outline: none;
 }
+.ant-select-selection-placeholder {
+  color: #999; /* Color del placeholder */
+}
+
 
 .home__select--propiedad {
   display: flex;
   width: 217px;
   height: 49px;
-  padding: 12px 30px;
+  
   justify-content: center;
   align-items: center;
   gap: 10px;
-  border: 1px solid #cccbcb;
-  background: #fff;
+ 
+  
   color: #000;
   font-family: Poppins;
   font-size: 14px;
