--- a/template/registrate.html
+++ b/template/registrate.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-580-woox-travel
                     <ul class="nav">
                       <li><a href="propiedades.html" class="active">Propiedades</a></li>
                       <li><a href="usd.html">USD($)</a></li>
-                      <li><a href="ingresa-propiedad.html">Ingresa tu propiedad</a></li>
+                      <li><a href="iniciar-sesion.html">Ingresa tu propiedad</a></li>
                       <li><a href="iniciar-sesion.html">Inicia sesión</a></li>
                       <li><a href="registrate.html">Regístrate</a></li>
                   </ul>   
